--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "build:doc:test": "storybook build -o dist --quiet --test",
     "build:app": "vite build apps/app",
     "build:nextra": "npm run build -w apps/docs",
-    "test": "lerna run test",
+    "test": "lerna run test -- --run",
     "test:a11y": "node scripts/a11y.mjs",
-    "coverage": "lerna run coverage",
+    "test:coverage": "lerna run test -- --run --coverage",
     "check": "npm-run-all --parallel prettier lint typecheck",
     "prettier": "prettier --log-level warn --check .",
     "prettier:fix": "prettier --write .",
@@ -54,18 +54,19 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
-    "@storybook/addon-a11y": "^8.0.5",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/core-common": "^8.0.5",
-    "@storybook/manager-api": "^8.0.5",
-    "@storybook/preview-api": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
-    "@storybook/test": "^8.0.5",
-    "@storybook/test-runner": "^0.17.0",
+    "@storybook/addon-a11y": "^8.2.4",
+    "@storybook/addon-essentials": "^8.2.4",
+    "@storybook/addon-links": "^8.2.4",
+    "@storybook/core-common": "^8.2.4",
+    "@storybook/manager-api": "^8.2.4",
+    "@storybook/preview-api": "^8.2.4",
+    "@storybook/react": "^8.2.4",
+    "@storybook/react-vite": "^8.2.4",
+    "@storybook/test": "^8.2.4",
+    "@storybook/test-runner": "^0.19.1",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
@@ -75,8 +76,8 @@
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
+    "@vitest/coverage-v8": "^2.0.4",
+    "@vitest/ui": "^2.0.4",
     "add": "^2.0.6",
     "arquero": "^5.3.0",
     "axe-playwright": "^2.0.1",
@@ -103,7 +104,7 @@
     "leaflet": "^1.9.4",
     "lerna": "^7.4.2",
     "lint-staged": "^15.2.2",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.2.2",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "pretty-quick": "^4.0.0",
@@ -115,7 +116,7 @@
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.10.1",
     "remark-gfm": "^4.0.0",
-    "storybook": "^8.0.5",
+    "storybook": "^8.2.4",
     "swr": "^2.2.4",
     "typescript": "^5.5.4",
     "uid": "^2.0.2",
@@ -124,14 +125,14 @@
     "vite": "^5.1.0",
     "vite-plugin-dts": "^3.9.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.2.2",
+    "vitest": "^2.0.4",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "overrides": {
-    "storycrawler": {
-      "puppeteer-core": "20.9.0"
+    "eslint-plugin-jsx-a11y": {
+      "aria-query": "^5.3.0"
     }
   },
   "husky": {
