--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,7 +35,11 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@hitachivantara/uikit-styles": "^5.31.0"
+    "@emotion/css": "^11.13.0",
+    "@emotion/serialize": "^1.3.0",
+    "@emotion/utils": "^1.4.0",
+    "@hitachivantara/uikit-styles": "^5.31.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
