--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -42,8 +42,8 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/css": "^11.11.0",
-    "@hitachivantara/uikit-react-core": "^5.66.14"
+    "@hitachivantara/uikit-react-shared": "^5.1.45",
+    "@hitachivantara/uikit-styles": "^5.31.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
