ci: inline playwright/a11y tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,12 +51,58 @@ jobs:
 
   playwright:
     name: Playwright Tests
-    uses: ./.github/workflows/tests-playwright.yml
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        PROJECT: ["chrome", "firefox"]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        uses: ./.github/actions/install-dependencies
+
+      - name: Install Playwright
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test --project=${{ matrix.PROJECT }}
+
+      - name: Archive Playwright report
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: report-[${{ matrix.PROJECT }}]
+          path: playwright-report/
+          retention-days: 5
 
   a11y:
     name: A11y Tests
-    uses: ./.github/workflows/tests-a11y.yml
-    secrets: inherit
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        uses: ./.github/actions/install-dependencies
+
+      - name: Install Playwright
+        run: npx playwright install --with-deps
+
+      - name: Build Storybook
+        run: npm run build:doc:test
+        env:
+          NODE_OPTIONS: "--max_old_space_size=8192"
+
+      - name: Run Tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+          "npx serve dist -l 6006 -L" \
+          "npx wait-on tcp:6006 && npm run test:a11y"
 
   build:
     name: Build
