--- a/lerna.json
+++ b/lerna.json
@@ -2,12 +2,16 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "independent",
   "packages": ["packages/*"],
+  "yes": true,
+  "distTag": "latest",
+  "preDistTag": "next",
   "command": {
     "publish": {
       "npmClientArgs": ["--legacy-peer-deps", "--production=false"]
     },
     "version": {
-      "allowBranch": ["master", "next*", "feat/*", "fix/*", "bug/*"],
+      "allowBranch": ["master", "next"],
+      "preid": "next",
       "message": "chore(release): publish",
       "conventionalCommits": true,
       "createRelease": "github",
