--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "lint-staged": "lint-staged",
     "typecheck": "lerna run typecheck",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
-    "publish:test": "lerna publish --conventional-graduate --yes --no-git-tag-version --no-push",
-    "publish:release": "lerna publish --conventional-graduate --yes",
-    "publish:next": "lerna publish --conventional-prerelease --yes --preid next --dist-tag next",
+    "publish-dry": "lerna publish --no-push --registry \"http://localhost:4873/\"",
+    "publish": "lerna publish",
     "prepare": "npx husky install .config/husky",
     "lab:flow": "node scripts/flow-styles"
   },
@@ -103,7 +102,7 @@
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "leaflet": "^1.9.4",
-    "lerna": "^7.4.2",
+    "lerna": "^8.1.7",
     "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.2.2",
     "prettier": "^3.1.0",
