--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -4,19 +4,12 @@ description: Install UI Kit dependencies
 runs:
   using: "composite"
   steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: ${{ env.FETCH_DEPTH }}
-
     - name: Install Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 18
 
     - name: Install dependencies
-      env:
-        # ensure dev dependencies are installed
-        NODE_ENV: development
-      run: npm ci
+      # ensure dev dependencies are installed
+      run: npm ci --include=dev
       shell: bash
