test(build): build app instead of packages

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,4 +116,4 @@ jobs:
         uses: ./.github/actions/install-dependencies
 
       - name: Run Build
-        run: npm run build
+        run: npm run build:app
