--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,12 @@ lerna-debug.log*
 # Build
 dist
 bin
-packages/icons/src
 packages/icons/sprites
+packages/icons/src/*
+!packages/icons/src/IconBase.tsx
+!packages/icons/src/IconSprite.tsx
+!packages/icons/src/utils.ts
+
 *.tgz
 .nx
 
