--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hitachivantara/uikit-react-core",
-  "version": "5.67.1",
+  "name": "@hitachivantara/uikit-react-utils",
+  "version": "0.1.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "Core React components for the NEXT Design System.",
+  "description": "UI Kit utilities package.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "src/index.ts",
   "sideEffects": false,
@@ -18,7 +18,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git",
-    "directory": "packages/core"
+    "directory": "packages/utils"
   },
   "license": "Apache-2.0",
   "bugs": {
@@ -26,54 +26,24 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.12.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
     "@emotion/serialize": "^1.1.2",
-    "@hitachivantara/uikit-react-icons": "^5.10.7",
+    "@emotion/utils": "^1.4.0",
     "@hitachivantara/uikit-react-shared": "^5.2.0",
-    "@hitachivantara/uikit-react-utils": "^0.1.0",
-    "@hitachivantara/uikit-styles": "^5.31.1",
-    "@internationalized/date": "^3.2.0",
-    "@mui/base": "^5.0.0-beta.40",
-    "@popperjs/core": "^2.11.8",
-    "@react-aria/datepicker": "^3.9.0",
-    "@react-stately/datepicker": "^3.9.0",
-    "@types/react-table": "^7.7.18",
-    "clsx": "^2.0.0",
-    "dayjs": "^1.11.10",
-    "detect-browser": "^5.3.0",
-    "embla-carousel-react": "^8.1.3",
-    "notistack": "^2.0.8",
-    "rc-slider": "^10.5.0",
-    "rc-tooltip": "^6.1.2",
-    "react-color": "^2.19.3",
-    "react-popper": "^2.3.0",
-    "react-resize-detector": "^8.1.0",
-    "react-table": "^7.8.0",
-    "react-window": "^1.8.10"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
-    "@types/react-color": "^2.17.10",
     "@types/react-dom": "^18.2.17",
-    "@types/react-window": "^1.8.8",
-    "vite": "^5.1.0",
-    "vitest": "^2.0.4"
+    "vite": "^5.1.0"
   },
   "files": [
     "dist"
@@ -95,8 +65,7 @@
     "withoutPublish": true,
     "tempDir": "package",
     "fields": [
-      "main",
-      "type"
+      "main"
     ],
     "files": [
       "tsconfig.json"
