--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
         id: version
         # Outputs the NEW_VERSION if there is one, or empty otherwise
         run: |
-          VERSION=v$(npm pkg get version -ws | sed -n 's/.*uikit-react-core": "\(.*\)".*/\1/p'
+          VERSION=v$(npm pkg get version -ws | sed -n 's/.*uikit-react-core": "\(.*\)".*/\1/p')
           echo "NEW_VERSION=$( [ "$CURRENT_VERSION" = "$VERSION" ] && echo "" || echo "$VERSION" )" >> "$GITHUB_OUTPUT"
 
       - name: Tag Release
@@ -86,13 +86,14 @@ jobs:
           VERSION: ${{steps.version.outputs.NEW_VERSION}}
         run: |
           git tag -a $VERSION -m "Version $VERSION"
-          git push --tags
+          git push $VERSION
 
       - name: Create GitHub Release
         if: steps.version.outputs.NEW_VERSION
-        run: npx changelogithub@0.13
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{steps.version.outputs.NEW_VERSION}}
+        run: npx changelogithub@0.13 --from $CURRENT_VERSION --to $VERSION
 
   publish-documentation:
     name: Publish Documentation
