--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -42,6 +42,7 @@
     "@emotion/css": "^11.11.0",
     "@hitachivantara/uikit-react-core": "^5.68.1",
     "@hitachivantara/uikit-react-icons": "^5.10.8",
+    "@hitachivantara/uikit-react-utils": "^0.2.0",
     "@mui/base": "^5.0.0-beta.40",
     "react-resize-detector": "^8.1.0"
   },
