--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -59,6 +59,7 @@
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
+        "types": "./dist/types/index.d.ts",
         "require": "./dist/cjs/index.cjs",
         "import": "./dist/esm/index.js"
       }
