--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -86,6 +86,7 @@
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
+        "types": "./dist/types/index.d.ts",
         "require": "./dist/cjs/index.cjs",
         "import": "./dist/esm/index.js"
       }
