--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -46,6 +46,7 @@
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
+        "types": "./dist/types/index.d.ts",
         "require": "./dist/cjs/index.cjs",
         "import": "./dist/esm/index.mjs"
       }
