--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -55,6 +55,7 @@
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
+        "types": "./dist/types/index.d.ts",
         "require": "./dist/cjs/index.cjs",
         "import": "./dist/esm/index.mjs"
       }
