--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -66,7 +66,8 @@
     "withoutPublish": true,
     "tempDir": "package",
     "fields": [
-      "main"
+      "main",
+      "type"
     ],
     "files": [
       "tsconfig.json"
