--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,9 +4,6 @@ on:
   workflow_dispatch:
   workflow_call:
 
-env:
-  LICENSES_WHITELIST: Apache-2.0;ISC;BSD-2-Clause;BSD-3-Clause;MIT;W3C;Zlib;CC-BY-4.0;Hippocratic-2.1;Python-2.0;MPL-2.0;Unlicense;EPL-2.0;BSD;BlueOak-1.0.0;CC0-1.0;CC-BY-3.0;WTFPL
-
 jobs:
   checks:
     name: Static Checks
@@ -20,8 +17,7 @@ jobs:
         uses: ./.github/actions/install-dependencies
 
       - name: License Check
-        run: |
-          npx license-checker-rseidelsohn --onlyAllow "${{ env.LICENSES_WHITELIST }}" --excludePackagesStartingWith "buffers;flatbuffers"
+        run: npx license-compliance
 
       - name: Security Audit
         run: npm audit --workspaces --omit dev
