chore: fix package.json issues
use `npm pkg fix -ws` to fix package.json issues

declare packageManager

--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lumada-design/hv-uikit-react.git",
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
     "directory": "packages/pentaho"
   },
   "license": "Apache-2.0",
