--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hv-uikit-react",
+  "version": "0.0.0",
   "type": "module",
   "private": true,
   "description": "The React component library for the Next Design System.",
@@ -7,7 +8,7 @@
   "author": "Hitachi Vantara UI Kit Team",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lumada-design/hv-uikit-react.git"
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git"
   },
   "bugs": {
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
@@ -140,6 +141,7 @@
       "aria-query": "^5.3.0"
     }
   },
+  "packageManager": "npm@10.8.1+sha256.b8807aebb9656758e2872fa6e7c564b506aa2faa9297439a478d471d2fe32483",
   "prettier": "@hitachivantara/uikit-config/prettier",
   "license-compliance": {
     "extends": "@hitachivantara/uikit-config/licenses"
