--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lumada-design/hv-uikit-react.git",
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
     "directory": "packages/cli"
   },
   "bugs": {
