--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lumada-design/hv-uikit-react.git",
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
     "directory": "packages/lab"
   },
   "license": "Apache-2.0",
