--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -13,6 +13,7 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 18
+        cache: npm
 
     - name: Install dependencies
       if: ${{ inputs.install == 'true' }}
