--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/addon-a11y": "^8.2.4",
     "@storybook/addon-essentials": "^8.2.4",
     "@storybook/addon-links": "^8.2.4",
+    "@storybook/addon-themes": "^8.2.4",
     "@storybook/core-common": "^8.2.4",
     "@storybook/manager-api": "^8.2.4",
     "@storybook/preview-api": "^8.2.4",
