--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint-plugin-ssr-friendly": "^1.3.0",
     "eslint-plugin-storybook": "^0.8.0",
     "formik": "^2.4.5",
+    "happy-dom": "^15.7.4",
     "html-react-parser": "^3.0.16",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
