test(Chromatic): better font loading & LineChart diffThreshold
- load Inter & Open Sans fonts in single request & in <link preload>
- increase LineChart visual threshold to avoid browser flukes

--- a/.config/chromatic.config.json
+++ b/.config/chromatic.config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.chromatic.com/config-file.schema.json",
   "projectId": "Project:66a1254d9d7ebf301ff1bebb",
   "buildScriptName": "build:doc:test",
   "skip": "dependabot/**"
