--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@storybook/react-vite": "^8.3.1",
     "@storybook/test": "^8.3.1",
     "@storybook/test-runner": "^0.19.1",
+    "@storybook/types": "^8.3.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.0",
