--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,6 +13,8 @@ on:
 env:
   PUBLISH_FOLDER: ${{ inputs.publish-folder || github.ref_name }}
   PUBLISH_STORYBOOK: ${{ inputs.publish-storybook }}
+  PUBLISH_APP: ${{ github.ref == 'refs/heads/master' }}
+  PUBLISH_DOCS: false
 
 jobs:
   build-artifacts:
@@ -23,40 +25,82 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build Artifacts
-        uses: ./.github/actions/build-artifacts
+      - name: Install Dependencies
+        uses: ./.github/actions/install-dependencies
+
+      - name: Build Documentation
+        if: ${{ env.PUBLISH_STORYBOOK == 'true' }}
+        run: npm run build:doc
         env:
-          APP_BASE_PATH: /uikit-app/${{ env.PUBLISH_FOLDER }}/
+          NODE_OPTIONS: "--max_old_space_size=8192"
+
+      - name: Archive Documentation
+        if: ${{ env.PUBLISH_STORYBOOK == 'true' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation
+          path: ${{ github.workspace }}/dist
+          retention-days: 2
+
+      - name: Build App
+        if: ${{ env.PUBLISH_APP == 'true' }}
+        run: npm run build:app -- --base=/uikit-app/${{ env.PUBLISH_FOLDER }}/
+
+      - name: Archive App
+        if: ${{ env.PUBLISH_APP == 'true' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: app
+          path: ${{ github.workspace }}/apps/app/dist
+          retention-days: 2
+
+      # Bypassing Jekyll processing on GitHub Pages by adding .nojekyll to read folders that start with an underscore
+      - name: Build Nextra Docs
+        if: ${{ env.PUBLISH_DOCS == 'true' }}
+        env:
           NEXTRA_BASE_PATH: /uikit-docs/${{ env.PUBLISH_FOLDER }}
-          PUBLISH_STORYBOOK: ${{ env.PUBLISH_STORYBOOK }}
+        run: npm run build:nextra && touch ${{ github.workspace }}/apps/docs/out/.nojekyll
+
+      - name: Archive Nextra Docs
+        if: ${{ env.PUBLISH_DOCS == 'true' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: nextra-docs
+          path: ${{ github.workspace }}/apps/docs/out
+          retention-days: 2
 
   deploy-artifacts:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build-artifacts
-    strategy:
-      max-parallel: 1
-      matrix:
-        include:
-          - folder: "uikit"
-            artifact: "documentation"
-          - folder: "uikit-app"
-            artifact: "app"
-          #- folder: "uikit-docs"
-          #  artifact: "nextra-docs"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy Artifacts
-        if: ${{ (matrix.artifact != 'documentation') || (matrix.artifact == 'documentation' && env.PUBLISH_STORYBOOK == 'true') }}
+      - name: Deploy Storybook
+        if: ${{ env.PUBLISH_STORYBOOK == 'true' }}
         uses: ./.github/actions/deploy-artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
-          PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-          PUBLISH_FOLDER: ${{ matrix.folder }}/${{ env.PUBLISH_FOLDER }}
-          PUBLISH_MESSAGE: "chore: ${{ matrix.artifact }} for ${{ env.PUBLISH_FOLDER }} of ${{ github.repository }}"
-          URL: https://${{ github.repository_owner }}.github.io/${{ matrix.folder }}/${{ env.PUBLISH_FOLDER }}/
-          ARTIFACT: ${{ matrix.artifact }}
+          PUBLISH_FOLDER: uikit/${{ env.PUBLISH_FOLDER }}
+          ARTIFACT: documentation
+
+      - name: Deploy App
+        if: ${{ env.PUBLISH_APP == 'true' }}
+        uses: ./.github/actions/deploy-artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          PUBLISH_FOLDER: uikit-app/${{ env.PUBLISH_FOLDER }}
+          ARTIFACT: app
+
+      - name: Deploy Docs
+        if: ${{ env.PUBLISH_DOCS == 'true' }}
+        uses: ./.github/actions/deploy-artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          PUBLISH_FOLDER: uikit-docs/${{ env.PUBLISH_FOLDER }}
+          ARTIFACT: nextra-docs
