--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -18,5 +18,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.tsx", "**/*.ts"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
