--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@hitachivantara/uikit-react-shared": ["packages/shared/src"],
       "@hitachivantara/uikit-react-viz": ["packages/viz/src"],
       "@hitachivantara/uikit-styles": ["packages/styles/src"],
-      "~/*": ["apps/app/src/*"]
+      "~/*": ["apps/app/src/*"],
+      "@docs/*": ["apps/docs/src/*"]
     }
   },
   "include": [".config", ".storybook/**/*", "apps", "docs", "packages"],
