--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,33 +8,28 @@
     "start": "npx serve dist"
   },
   "dependencies": {
-    "@emotion/css": "^11.11.0",
-    "@hitachivantara/uikit-react-code-editor": "*",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
-    "@hitachivantara/uikit-react-lab": "*",
-    "@hitachivantara/uikit-react-pentaho": "*",
     "@hitachivantara/uikit-react-viz": "*",
-    "@hitachivantara/uikit-styles": "*",
-    "@hitachivantara/uikit-uno-preset": "*",
-    "@unocss/reset": "^0.62.4",
-    "next": "^14.2.7",
-    "nextra": "3.0.0-alpha.22",
-    "nextra-theme-docs": "3.0.0-alpha.22",
+    "@phosphor-icons/react": "^2.1.7",
+    "clsx": "^2.1.1",
+    "next": "^14.2.5",
+    "nextra": "3.0.3",
+    "nextra-theme-docs": "3.0.3",
     "prism-react-renderer": "^2.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-live-runner": "^1.0.7",
-    "react-runner": "^1.0.5",
-    "rehype-mdx-code-props": "^3.0.1",
-    "unocss": "^0.62.4"
+    "react-runner": "^1.0.5"
   },
   "devDependencies": {
-    "@types/node": "22.5.2",
-    "@types/react": "^18.3.5",
-    "@unocss/webpack": "^0.62.4",
-    "autoprefixer": "^10.4.20",
+    "@hitachivantara/uikit-uno-preset": "*",
+    "@types/node": "^20.11.6",
+    "@types/react": "^18.2.43",
+    "@unocss/postcss": "latest",
+    "rehype-mdx-code-props": "^3.0.1",
     "string-replace-loader": "^3.1.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.4.2",
+    "unocss": "^0.63.3"
   }
 }
