--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,6 +8,7 @@
     "start": "npx serve dist"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.0",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
     "@hitachivantara/uikit-react-viz": "*",
@@ -17,8 +18,10 @@
     "nextra": "3.0.3",
     "nextra-theme-docs": "3.0.3",
     "prism-react-renderer": "^2.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-docgen-typescript": "^2.2.2",
+    "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-live-runner": "^1.0.7",
     "react-runner": "^1.0.5"
   },
