--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -36,6 +36,10 @@ jobs:
     name: Request Citadel Scan
     runs-on: [self-hosted, Linux]
 
+    env:
+      CITADEL_URL: ${{ vars.CITADEL_URL }}
+      BLACK_DUCK_URL: ${{ vars.BLACK_DUCK_URL }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -60,9 +64,11 @@ jobs:
           - "core"
           - "icons"
           - "lab"
+          - "pentaho"
           - "shared"
           - "styles"
           - "uno-preset"
+          - "utils"
           - "viz"
 
     steps:
@@ -76,21 +82,16 @@ jobs:
 
       # Install dependencies inside each package so blackduck can scan them
       # To do this we need to remove the package.json and package-lock.json from the root
-      - name: Prepare package for Blackduck scan
-        uses: lumada-common-services/gh-composite-actions@1.9.0
-        with:
-          command: |
-            rm -rf node_modules package.json package-lock.json && \
-            cd packages/${{ matrix.PACKAGE }} && npm i
+      - run: |
+          rm -rf node_modules package.json package-lock.json
+          cd packages/${{ matrix.PACKAGE }} && npm i
 
       - name: Load BlackDuck variables
-        working-directory: packages/${{ matrix.PACKAGE }}
         run: |
+          echo "BLACKDUCK_ARGS=$(.github/scripts/getBlackduckArgs.mjs ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
+          cd packages/${{ matrix.PACKAGE }}
           echo "PROJECT_NAME=$(npm pkg get name --workspaces=false | tr -d '""')" >> $GITHUB_ENV
           echo "PROJECT_VERSION=$(npm pkg get version --workspaces=false | tr -d '"')" >> $GITHUB_ENV
-
-      - name: Load blackduck project properties
-        run: echo "BLACKDUCK_ARGS=$(.github/scripts/getBlackduckArgs.mjs ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
 
       - name: Blackduck Scan
         uses: lumada-common-services/gh-composite-actions@1.9.0
@@ -99,7 +100,7 @@ jobs:
           BLACKDUCK_DOCKER_PASSWORD: ${{ secrets.ARTIFACTORY_HVSERVICES_CICD_TOKEN }}
           BlackDuck_Project_Name: "${{ env.PROJECT_NAME }}"
           BlackDuck_Source_Path: /workdir/packages
-          BlackDuck_Project_Version: "${{ env.PROJECT_VERSION }}"
+          BlackDuck_Project_Version: "master"
           BlackDuck_Api_Token: "${{ secrets.BLACKDUCK_TOKEN }}"
           BlackDuck_Url: "${{ secrets.BLACKDUCK_URL }}"
           ADDITIONAL_ARGS: "${{ env.BLACKDUCK_ARGS }}"
