--- a/.eslintrc
+++ b/.eslintrc
@@ -29,13 +29,7 @@
     "react/no-unused-prop-types": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/function-component-definition": [
-      "error",
-      {
-        "namedComponents": "arrow-function",
-        "unnamedComponents": "arrow-function"
-      }
-    ],
+    "react/function-component-definition": "off",
     "react/no-unstable-nested-components": [
       "error",
       {
