--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "react-router dev",
     "check": "tsc --noEmit",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "react-router build",
+    "start": "react-router-serve ./build/server/index.js",
+    "preview": "react-router preview",
+    "typecheck": "react-router typegen && tsc",
+    "typegen:watch": "react-router typegen --watch"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hitachivantara/uikit-react-code-editor": "*",
     "@hitachivantara/uikit-react-core": "*",
@@ -21,19 +28,21 @@
     "@hitachivantara/uikit-react-viz": "*",
     "@hitachivantara/uikit-styles": "*",
     "@mui/material": "^5.14.20",
+    "@react-router/node": "^7.0.0-pre.5",
+    "@react-router/serve": "^7.0.0-pre.5",
     "arquero": "^5.3.0",
     "clsx": "^2.0.0",
-    "formik": "^2.4.5",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "isbot": "^5.1.17",
     "json5": "^2.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-grid-layout": "^1.4.4",
     "react-i18next": "^12.3.1",
-    "react-router-dom": "^6.20.1",
+    "react-router": "^7.0.0-pre.5",
     "reactflow": "^11.10.1",
     "swr": "^2.2.4",
     "usehooks-ts": "^2.16.0",
@@ -41,6 +50,7 @@
   },
   "devDependencies": {
     "@hitachivantara/uikit-uno-preset": "*",
+    "@react-router/dev": "^7.0.0-pre.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
