refactor: fix MUI broken ESM imports

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,8 @@
     "node-plop": "^0.31.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.1"
+    "@types/fs-extra": "^11.0.1",
+    "react-router-dom": "^6.28.0"
   },
   "engineStrict": true,
   "engines": {
