--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "lerna run build",
     "build:doc": "storybook build -o dist --quiet && node scripts/storybook-title",
     "build:doc:test": "storybook build -o dist --quiet --test",
-    "build:app": "vite build apps/app",
+    "build:app": "npm run build -w apps/app",
     "build:nextra": "npm run build -w apps/docs",
     "test": "lerna run test -- --run",
     "test:a11y": "node scripts/a11y.mjs",
