chore(app): remove i18next & other unused code
i18next is mostly unused & its extending React's types which is
affecting packages' type checking/IDE linting

--- a/packages/cli/.eslintrc.json
+++ b/packages/cli/.eslintrc.json
@@ -5,6 +5,7 @@
     "import/extensions": "off",
     "ssr-friendly/no-dom-globals-in-module-scope": "off"
   },
+  "ignorePatterns": ["src/baselines/**/*"],
   "overrides": [
     {
       "files": ["src/baselines/**/*"],
