build(cli): dedupe /templates directory
- remove unix link in favor of copying directory on build
  - addresses Windows link issues
- add missing rimraf dependency & cpy

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "clean": "npx rimraf package",
+    "prepare": "npx cpy ../../templates src",
     "pretest": "node src/index.js create uikit-app -t Form,ListView",
     "test": "cd uikit-app",
     "posttest": "npx rimraf uikit-app",
