--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "chromatic": "^11.8.0",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
+    "cpy-cli": "^5.0.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "eslint": "^8.55.0",
@@ -119,6 +120,7 @@
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.10.1",
     "remark-gfm": "^4.0.0",
+    "rimraf": "^4.4.1",
     "storybook": "^8.4.1",
     "swr": "^2.2.4",
     "typescript": "^5.4.2",
