--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     }
   },
   "include": [
-    ".config",
+    ".config/*.ts",
+    "*.config.ts",
     ".storybook/**/*",
     "apps",
     "docs",
