chore(types): remove indiscriminate root path imports
- IDEs shoud no longer suggest invalid packages/* imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "paths": {
+      ".storybook/*": ["./.storybook/*"],
       "~/*": ["./apps/app/src/*"],
       "@docs/*": ["./apps/docs/src/*"]
     }
