chore: add raw-loader and remove redundant react-runner deps

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,13 +18,13 @@
     "nextra": "3.2.3",
     "nextra-theme-docs": "3.2.3",
     "prism-react-renderer": "^2.4.0",
+    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
     "react-live-runner": "^1.0.7",
-    "react-markdown": "^9.0.3",
-    "react-runner": "^1.0.5"
+    "react-markdown": "^9.0.3"
   },
   "devDependencies": {
     "@hitachivantara/uikit-uno-preset": "*",
