docs: add Table & useHvTable
docs: add table examples

chore: move server-side example to stackblitz

merge table + table hooks page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -124,10 +124,7 @@
     },
     {
       "files": ["**/*.stories.ts?(x)"],
-      "extends": ["plugin:storybook/recommended"],
-      "rules": {
-        "react-hooks/rules-of-hooks": "off"
-      }
+      "extends": ["plugin:storybook/recommended"]
     },
     {
       "files": ["**/templates/**/*.ts?(x)"],
