chore(deps): bump minor deps
- run `npm upgrade` to fix vuln
- bump storybook via script
- address found issues
- pin `rc-tooltip` minor because it introduces a11y issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,6 +64,10 @@
     "import/no-unresolved": "off",
     // #endregion
 
+    // #region TypeScript
+    "@typescript-eslint/no-empty-object-type": "off",
+    // #endregion
+
     "no-restricted-imports": [
       "error",
       {
@@ -93,8 +97,9 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unsafe-function-type": "off",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       { "ignoreRestSiblings": true }
     ]
   },
