--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,11 +14,10 @@
     "@hitachivantara/uikit-react-viz": "*",
     "@phosphor-icons/react": "^2.1.7",
     "clsx": "^2.1.1",
-    "next": "^15.1.2",
-    "nextra": "3.2.3",
-    "nextra-theme-docs": "3.2.3",
+    "next": "^15.1.7",
+    "nextra": "^3.3.1",
+    "nextra-theme-docs": "^3.3.1",
     "prism-react-renderer": "^2.4.0",
-    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.3.1",
@@ -31,6 +30,7 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@unocss/postcss": "^0.58.5",
+    "raw-loader": "^4.0.2",
     "rehype-mdx-code-props": "^3.0.1",
     "string-replace-loader": "^3.1.0",
     "typescript": "^5.4.2",
