--- a/package.json
+++ b/package.json
@@ -58,18 +58,18 @@
     "@mdx-js/react": "^3.1.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
-    "@storybook/addon-a11y": "^8.4.1",
-    "@storybook/addon-essentials": "^8.4.1",
-    "@storybook/addon-links": "^8.4.1",
-    "@storybook/addon-themes": "^8.4.1",
-    "@storybook/core-common": "^8.4.1",
-    "@storybook/manager-api": "^8.4.1",
-    "@storybook/preview-api": "^8.4.1",
-    "@storybook/react": "^8.4.1",
-    "@storybook/react-vite": "^8.4.1",
-    "@storybook/test": "^8.4.1",
-    "@storybook/test-runner": "^0.19.1",
-    "@storybook/types": "^8.4.1",
+    "@storybook/addon-a11y": "^8.5.6",
+    "@storybook/addon-essentials": "^8.5.6",
+    "@storybook/addon-links": "^8.5.6",
+    "@storybook/addon-themes": "^8.5.6",
+    "@storybook/core-common": "^8.5.6",
+    "@storybook/manager-api": "^8.5.6",
+    "@storybook/preview-api": "^8.5.6",
+    "@storybook/react": "^8.5.6",
+    "@storybook/react-vite": "^8.5.6",
+    "@storybook/test": "^8.5.6",
+    "@storybook/test-runner": "^0.21.1",
+    "@storybook/types": "^8.5.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.0",
@@ -79,8 +79,8 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^2.0.4",
     "@vitest/ui": "^2.0.4",
@@ -100,7 +100,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-ssr-friendly": "^1.3.0",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.11.3",
     "formik": "^2.4.5",
     "happy-dom": "^15.7.4",
     "html-react-parser": "^3.0.16",
@@ -121,9 +121,9 @@
     "reactflow": "^11.10.1",
     "remark-gfm": "^4.0.0",
     "rimraf": "^4.4.1",
-    "storybook": "^8.4.1",
+    "storybook": "^8.5.6",
     "swr": "^2.2.4",
-    "typescript": "^5.4.2",
+    "typescript": "^5.7.2",
     "uid": "^2.0.2",
     "unocss": "^0.58.5",
     "usehooks-ts": "^2.9.1",
@@ -136,11 +136,9 @@
     "zustand": "^4.4.7"
   },
   "overrides": {
+    "@storybook/csf": "^0.1.13",
     "eslint-plugin-jsx-a11y": {
       "aria-query": "^5.3.0"
-    },
-    "title": {
-      "clipboardy": "^4.0.0"
     }
   },
   "packageManager": "npm@10.8.1+sha256.b8807aebb9656758e2872fa6e7c564b506aa2faa9297439a478d471d2fe32483",
