--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,7 @@
     "@hitachivantara/uikit-react-utils": "^0.2.24",
     "@hitachivantara/uikit-styles": "^5.41.2",
     "@internationalized/date": "^3.2.0",
-    "@mui/base": "^5.0.0-beta.40",
+    "@mui/base": "5.0.0-beta.68",
     "@popperjs/core": "^2.11.8",
     "@react-aria/datepicker": "^3.9.0",
     "@react-stately/datepicker": "^3.9.0",
@@ -57,7 +57,7 @@
     "embla-carousel-react": "^8.1.3",
     "notistack": "^2.0.8",
     "rc-slider": "^10.5.0",
-    "rc-tooltip": "^6.1.2",
+    "rc-tooltip": "~6.3.0",
     "react-color": "^2.19.3",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^8.1.0",
