--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -46,7 +46,7 @@
     "@hitachivantara/uikit-react-icons": "^5.13.7",
     "@hitachivantara/uikit-react-utils": "^0.2.24",
     "@hitachivantara/uikit-styles": "^5.41.2",
-    "@mui/base": "^5.0.0-beta.40",
+    "@mui/base": "5.0.0-beta.68",
     "@types/react-grid-layout": "^1.3.5",
     "react-grid-layout": "^1.4.4",
     "reactflow": "^11.10.1",
