--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -42,7 +42,7 @@
     "@hitachivantara/uikit-react-core": "^5.88.0",
     "@hitachivantara/uikit-react-icons": "^5.13.7",
     "@hitachivantara/uikit-react-utils": "^0.2.24",
-    "@mui/base": "^5.0.0-beta.40",
+    "@mui/base": "5.0.0-beta.68",
     "react-resize-detector": "^8.1.0"
   },
   "devDependencies": {
