--- a/packages/app-shell-ui/package.json
+++ b/packages/app-shell-ui/package.json
@@ -47,8 +47,10 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/uuid": "^9.0.1",
+    "@testing-library/react": "^16.0.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vitest": "^3.0.9"
   },
   "files": [
     "dist"
