--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "mock-fs": "^5.2.0",
     "tsc-watch": "^6.0.0"
   },
   "files": [
